--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 	<header class="header-section">
 		<div class="header-warp">
 			<div class="site-logo">
-				<img src="/img/newhbclogo2.png" alt="Logo" >
+<!-- 				<img src="/img/newhbclogo2.png" alt="Logo" > -->
+				<img class="picture" src="images/newhbclogo2.png"/>
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
