--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="header-warp">
 			<div class="site-logo">
 <!-- 				<img src="/img/newhbclogo2.png" alt="Logo" > -->
-				<img src="/img/newhbclogo2.png/" alt="Logo">
+				<img src="img/newhbclogo2.png/" alt="Logo">
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
