--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 		<div class="header-warp">
 			<div class="site-logo">
 <!-- 				<img src="/img/newhbclogo2.png" alt="Logo" > -->
-				<img src="img/newhbclogo2.png/" alt="Logo">
+<!-- 				<img src="img/newhbclogo2.png/" alt="Logo"> -->
+				img src="img/newhbclogo2.png" alt="">
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
