--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="site-logo">
 <!-- 				<img src="/img/newhbclogo2.png" alt="Logo" > -->
 <!-- 				<img src="img/newhbclogo2.png/" alt="Logo"> -->
-				<img src="newhbclogo2.png" alt="logo">
+				<img src="/newhbclogo2.png" alt="logo">
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
