--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	<header class="header-section">
 		<div class="header-warp">
 			<div class="site-logo">
-<!-- 				<img src="/img/newhbclogo2.png" alt="Logo" > -->
+				<img src="/img/newhbclogo2.png"/ alt="Logo" >
 <!-- 				<img src="img/newhbclogo2.png/" alt="Logo"> -->
-				<img src="newhbclogo2.png"/ alt="logo">
+<!-- 				<img src="newhbclogo2.png"/ alt="Logo"> -->
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
