--- a/delivery.html
+++ b/delivery.html
@@ -34,7 +34,7 @@
 	<header class="header-section">
 		<div class="header-warp">
 			<div class="site-logo">
-				<img src="/img/newhbclogo2.png" alt="Logo" >
+				<img src="/img/newhbclogo2.png"/ alt="Logo" >
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
