--- a/about.html
+++ b/about.html
@@ -34,7 +34,8 @@
 	<header class="header-section">
 		<div class="header-warp">
 			<div class="site-logo">
-				<img src="newhbclogo2.png"/ alt="Logo" >
+<!-- 				<img src="newhbclogo2.png"/ alt="Logo" > -->
+				<img src="img/newhbclogo2.png"/ alt="Logo" >
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
