--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				
 			</ul>
 			<div class="header-right">
-				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			
+<!-- 				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			 -->
 			</div>
 		</div>
 		<div class ="order-now">
@@ -63,6 +63,8 @@
 			  <!-- <button type="button" class="btn-sharp">Order Here </button> -->
 			  <!-- <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn-sharp" role="button">Order Here</a> -->
 			  <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn btn-info btn-sharp" role="button">Order Here</a>
+			  <p class="font3">Or</p>
+			  <p class="font3">Call to order <a href="tel:281-531-6800">  281-531-6800</a></p>
 		</div>
 		
 	</header>
