--- a/menu2.html
+++ b/menu2.html
@@ -50,7 +50,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="header-right">
-				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			
+<!-- 				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			 -->
 			</div>
         </div>
 	</header>
@@ -68,6 +68,8 @@
                         <!-- <a href="https://www.ezcater.com/catering/pvt/houston-barbecue-company-houston?">Order Catering Here</a> -->
                         <!-- <a href="contact.html" class="button">Order Here</a> -->
                         <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn btn-info btn-sharp" role="button">Order Here</a>
+			<p class="font3">Or</p>
+			<p class="font3">Call to order <a href="tel:281-531-6800">  281-531-6800</a></p>
     
                             
                           <!-- </button> -->
