--- a/delivery.html
+++ b/delivery.html
@@ -50,7 +50,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="header-right">
-				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			
+<!-- 				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			 -->
 			</div>
         </div>
 	</header>
@@ -72,6 +72,7 @@
                             
                           <!-- </button> -->
                     </div>Call to place customized order
+			<a href="tel:281-531-6800">  281-531-6800</a>
                 </div>
 			</div>
 		</div>
