--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!-- 				<p><span></span> <i class="fa fa-phone"></i> <a href="tel:281-531-6800">  281-531-6800</a></p>			 -->
 			</div>
 		</div>
-		<div class ="order-now">
+		<div class ="order-now menu-spacer7">
 			<!-- <a href="https://direct.chownow.com/order/20454/locations/29517">Order Here</a> -->
 			<!-- <a href="contact.html" class="button">Order Here</a>
 				
@@ -65,6 +65,8 @@
 			  <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn btn-info btn-sharp" role="button">Order Here</a>
 			  <p class="font3">Or</p>
 			  <p class="font3">Call to order <a href="tel:281-531-6800">  281-531-6800</a></p>
+			  <p class="font3">Call to order <a href="tel:281-531-6800">  281-531-6800</a></p>
+
 		</div>
 		
 	</header>
