--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			  </button> -->
 			  <!-- <button type="button" class="btn-sharp">Order Here </button> -->
 			  <!-- <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn-sharp" role="button">Order Here</a> -->
-			  <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn btn-info btn-sharp" role="button">Order Here</a>
+			  <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn btn-info btn-sharp" role="button">Order Online Here</a>
 			  <p class="font3">Call to order <a href="tel:281-531-6800">  281-531-6800</a></p>
 
 		</div>
