--- a/delivery.html
+++ b/delivery.html
@@ -71,8 +71,11 @@
     
                             
                           <!-- </button> -->
-                    </div>Call to place customized order
-			<a href="tel:281-531-6800">  281-531-6800</a>
+                    </div>
+		    <div class="font3">or</div>
+                    <div class="font3">Call to place customized order</div>
+                    <a href="tel:281-531-6800">  281-531-6800</a>
+			
                 </div>
 			</div>
 		</div>
