--- a/menu2.html
+++ b/menu2.html
@@ -61,7 +61,7 @@
 	<section class="page-top-info set-bg" data-setbg="img/page-top-bg/3.jpg">
 		<div class="ptf-center">
 			<div class="container">
-                <h2>Menu<span></span>
+                <h2 class="menu-spacer7">Menu<span></span>
                 </h2>
                 <div class ="order-now font1"> 
                     <div class ="order-now">
