--- a/menu2.html
+++ b/menu2.html
@@ -68,6 +68,8 @@
                         <!-- <a href="https://www.ezcater.com/catering/pvt/houston-barbecue-company-houston?">Order Catering Here</a> -->
                         <!-- <a href="contact.html" class="button">Order Here</a> -->
                         <a href="https://direct.chownow.com/order/20454/locations/29517" class="btn btn-info btn-sharp" role="button">Order Online Here</a>
+			<div class="font3">or</div>
+
 			<p class="font3">Call to order <a href="tel:281-531-6800">  281-531-6800</a></p>
     
                             
