--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<div class="hero-slider owl-carousel">
 			<div class="hs-item set-bg" data-setbg="img/slider/slider-1.jpg">
 				<div class="hs-content">
-					<div class="hsc-warp">
+					<div class="hsc-warp menu-spacer7">
 						<h2>In House Central Texas Smoked Barbecue<span></span></h2>
 						<p></p>
 					</div>
@@ -85,7 +85,7 @@
 			</div>
 			<div class="hs-item set-bg" data-setbg="img/slider/slider-2.jpg">
 				<div class="hs-content">
-					<div class="hsc-warp">
+					<div class="hsc-warp menu-spacer7">
 						<h2>On Site Catering<span></span></h2>
 						<p></p>
 					</div>
@@ -93,7 +93,7 @@
 			</div>
 			<div class="hs-item set-bg" data-setbg="img/slider/slider-3.jpg">
 				<div class="hs-content">
-					<div class="hsc-warp">
+					<div class="hsc-warp menu-spacer7">
 						<h2>Corporate Delivery<span></span></h2>
 						<p></p>
 					</div>
