--- a/menu2.html
+++ b/menu2.html
@@ -152,7 +152,7 @@
                                     <p class="align1">1/4 Lb.<span class="font1"> $5.00</span></p>
                                     <p class="align1">1/2 Lb.<span class="font1"> $9.50</span></p>
                                     <p class="align1">1 Lb.<span class="font1"> $18.00</span></p>
-                                <h3 class="align1 font2">Pork Butt:</h3>
+                                <h3 class="align1 font2">Smoked Pork Butt:</h3>
                                     <p class=" menu-spacer font1 align1">Boston Style</p> 
                                     <p class="align1">1/4 Lb.<span class="font1"> $5.00</span></p>
                                     <p class="align1">1/2 Lb.<span class="font1"> $9.50</span></p>
