--- a/delivery.html
+++ b/delivery.html
@@ -142,7 +142,7 @@
                                     <hr>
                                     <p class="align1 menu-spacer ">Assorted Can Sodas <span class="font1">$1.25 each</span></p>
                                     <p class="align1 menu-spacer ">Bottled Water <span class="font1">$1.00 each</span></p>
-                                    <p class="align1">Tea Sweet, Unsweet, Raspberry, Peach<span class="font1"> $10-12 per gallon</span>
+                                    <p class="align1">Tea (Sweet, Unsweet, Raspberry, Peach)<span class="font1"> $10-12 per gallon</span>
                                     <p class="align1 font1">(serves 8-10) Unsweet Tea includes lemons & Sweetener</p>
                                     <hr>
                                 <h3 class=" align1">Deserts</h3>
